# football-assistant

./: .gitignore  Dockerfile  README.md  cleaned_articles_export.json  evaluate_answers.ipynb  main.py  pyproject.toml  request.json  test_runtime.py
.github/workflows/: ci.yaml
.zen/: config.yaml
configs/: digital_data_etl_coachesvoice.yaml  digital_data_etl_paul_iusztin.yaml  end_to_end_data.yaml  export_artifact_to_json.yaml  feature_engineering.yaml  training.yaml
examples/: orm.py
llm_engineering/: __init__.py  settings.py
llm_engineering/application/crawlers/: __init__.py  base.py  custom_article.py  dispatcher.py  medium.py
llm_engineering/application/dataset/: __init__.py  constants.py  generation.py  output_parsers.py  utils.py
llm_engineering/application/networks/: __init__.py  base.py  embeddings.py
llm_engineering/application/preprocessing/: __init__.py  chunking_data_handlers.py  cleaning_data_handlers.py  dispatchers.py  embedding_data_handlers.py
llm_engineering/application/preprocessing/operations/: __init__.py  chunking.py  cleaning.py
llm_engineering/application/rag/: base.py  prompt_templates.py  query_expansion.py  reranking.py  retriever.py  self_query.py
llm_engineering/application/utils/: __init__.py  misc.py  split_user_full_name.py
llm_engineering/domain/: __init__.py  chunks.py  cleaned_documents.py  dataset.py  documents.py  embedded_chunks.py  exceptions.py  inference.py  prompt.py  queries.py  types.py
llm_engineering/domain/base/: __init__.py  nosql.py  vector.py
llm_engineering/infrastructure/: files_io.py  inference_pipeline_api.py  opik_utils.py
llm_engineering/infrastructure/aws/deploy/: delete_sagemaker_endpoint.py
llm_engineering/infrastructure/aws/deploy/huggingface/: config.py  run.py  sagemaker_huggingface.py
llm_engineering/infrastructure/aws/roles/: create_execution_role.py  create_sagemaker_role.py
llm_engineering/infrastructure/db/: mongo.py  qdrant.py
llm_engineering/model/: utils.py
llm_engineering/model/finetuning/: finetune.py  sagemaker.py
llm_engineering/model/inference/: __init__.py  inference.py  run.py  test.py
output/: cleaned_documents.json  raw_documents.json
pipelines/: __init__.py  digital_data_etl.py  end_to_end_data.py  export_artifact_to_json.py  feature_engineering.py  generate_datasets.py  training.py
steps/: __init__.py
steps/etl/: __init__.py  crawl_links.py  get_or_create_user.py
steps/export/: __init__.py  serialize_artifact.py  to_json.py
steps/feature_engineering/: __init__.py  clean.py  load_to_vector_db.py  query_data_warehouse.py  rag.py
steps/generate_datasets/: __init__.py  create_prompts.py  generate_instruction_dataset.py  push_to_huggingface.py  query_feature_store.py
steps/training/: __init__.py  train.py
tools/: ml_service.py  rag.py  run.py
